# CityBuilder

./: .gitignore  CMakeLists.txt  main.cc  main.cpp  vcpkg.json
API/: CMakeLists.txt
API/file/include/: save_manager.h
API/file/src/: save_manager.cc
API/graphics/include/: display_box.h  draw.h  renderer.h  renderer_display_box.h
API/graphics/src/: draw.cc  renderer.cc  renderer_display_box.cc
API/include/file/: save_manager.h
API/include/graphics/: fast_noise_lite.h  renderer.h  renderer_display_box.h
API/src/file/: save_manager.cc
API/src/graphics/: renderer.cc  renderer_display_box.cc
API/utils/include/: timed_function.h  timer.h
Game/: CMakeLists.txt
Game/include/: building.h  context.h  display_box.h  file_dialog.h  game.h  market.h  npc_manager.h  placeable.h  position_data.h  random_generator.h  resource.h  start_menu.h  tile.h  vector2.h  vector2f.h  villager.h
Game/include/BehaviourTree/: node.h  selector_node.h  sequence_node.h
Game/include/behaviour_tree/: action_node.h  behaviour_tree_node.h  node.h  selector_node.h  sequence_node.h
Game/include/pathfinding/: path_node.h  pathfinder.h
Game/include/placeables/: building.h  display_box.h  horizontal_layout.h  placeable.h  resource.h  tile.h  vertical_layout.h  villager.h
Game/include/utils/: context.h  random_generator.h  vector2.h
Game/src/: file_dialog.cc  game.cc  horizontal_layout.cc  start_menu.cc  vertical_layout.cc  villager.cpp
Game/src/pathfinding/: pathfinder.cpp
_assets/: test.py  tile_sheet_maker.py
